Consolidate test execution